--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "acacha/admin-lte-template-laravel": "dev-master",
         "barryvdh/laravel-ide-helper": "^2.2",
         "barryvdh/laravel-debugbar": "^2.3",
-        "scool/ebre_escool_model": "dev-master"
+        "scool/ebre_escool_model": "dev-master",
+        "scool/curriculum": "dev-master",
+        "acacha/periods": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
