--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "barryvdh/laravel-debugbar": "^2.3",
         "scool/ebre_escool_model": "dev-master",
         "scool/curriculum": "dev-master",
-        "acacha/names": "dev-master"
+        "acacha/names": "dev-master",
+        "scool/foundation": "^0.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
