--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "scool/ebre_escool_model": "dev-master",
         "scool/curriculum": "dev-master",
         "acacha/names": "dev-master",
-        "scool/foundation": "^0.1.0"
+        "scool/foundation": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
