--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "scool/ebre_escool_model": "dev-master",
         "scool/curriculum": "dev-master",
         "acacha/names": "dev-master",
-        "scool/foundation": "dev-master"
+        "scool/foundation": "dev-master",
+        "acacha/l5-repository": "dev-master",
+        "acacha/stateful-eloquent": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
