First full version of enrollment migrations running

--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,74 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_CONNECTION=scool
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=homestead
+#DB_USERNAME=homestead
+#DB_PASSWORD=homestead
+
+#SCOOL
+DB_SCOOL_CONNECTION=scool
+DB_SCOOL_HOST=localhost
+DB_SCOOL_PORT=3306
+DB_SCOOL_DATABASE=scool
+DB_SCOOL_USERNAME=USER_HERE
+DB_SCOOL_PASSWORD=PASSWORD_HERE
+
+#SCOOL 201516
+DB_SCOOL_HOST_1516=localhost
+DB_SCOOL_PORT_1516=3306
+DB_SCOOL_DATABASE_1516=scool201516
+DB_SCOOL_USERNAME_1516=USER_HERE
+DB_SCOOL_PASSWORD_1516=PASSWORD_HERE
+
+#SCOOL 201415
+DB_SCOOL_HOST_1415=localhost
+DB_SCOOL_PORT_1415=3306
+DB_SCOOL_DATABASE_1415=scool201415
+DB_SCOOL_USERNAME_1415=USER_HERE
+DB_SCOOL_PASSWORD_1415=PASSWORD_HERE
+
+
+#SCOOL 201314
+DB_SCOOL_HOST_1314=localhost
+DB_SCOOL_PORT_1314=3306
+DB_SCOOL_DATABASE_1314=scool201314
+DB_SCOOL_USERNAME_1314=USER_HERE
+DB_SCOOL_PASSWORD_1314=PASSWORD_HERE
+
+
+#SCOOL 201213
+DB_SCOOL_HOST_1213=localhost
+DB_SCOOL_PORT_1213=3306
+DB_SCOOL_DATABASE_1213=scool201213
+DB_SCOOL_USERNAME_1213=USER_HERE
+DB_SCOOL_PASSWORD_1213=PASSWORD_HERE
+
+
+#SCOOL 201112
+DB_SCOOL_HOST_1112=localhost
+DB_SCOOL_PORT_1112=3306
+DB_SCOOL_DATABASE_1112=scool201112
+DB_SCOOL_USERNAME_1112=USER_HERE
+DB_SCOOL_PASSWORD_1112=PASSWORD_HERE
+
+#SCOOL 201011
+DB_SCOOL_HOST_1011=localhost
+DB_SCOOL_PORT_1011=3306
+DB_SCOOL_DATABASE_1011=scool201011
+DB_SCOOL_USERNAME_1011=USER_HERE
+DB_SCOOL_PASSWORD_1011=PASSWORD_HERE
+
+
+#EBRE_ESCOOL
+DB_EBRE_ESCOOL_CONNECTION=ebre_escool
+DB_EBRE_ESCOOL_HOST=localhost
+DB_EBRE_ESCOOL_PORT=3306
+DB_EBRE_ESCOOL_DATABASE=ebre_escool
+DB_EBRE_ESCOOL_USERNAME=USER_HERE
+DB_EBRE_ESCOOL_PASSWORD=PASSWORD_HERE
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -30,3 +92,5 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_KEY=
 PUSHER_SECRET=
+
+ADMIN_USER_PASSWORD=PASSWORD_HERE
