--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "barryvdh/laravel-debugbar": "^2.3",
         "scool/ebre_escool_model": "dev-master",
         "scool/curriculum": "dev-master",
+        "scool/enrollment": "dev-master",
         "acacha/names": "dev-master",
         "scool/foundation": "dev-master",
         "acacha/l5-repository": "dev-master",
